fixing the submit margin on mobile

--- a/main.css
+++ b/main.css
@@ -375,6 +375,7 @@ h5 {
   width: 90%;
   margin: 0 auto;
   margin-top: 4rem;
+  margin-bottom: 4rem;
   padding: 0 1rem;
 }
 
